# iot_system_BE/src/main/java/com/example/iot_system_BE/controller/DeviceActionController.java
@@ -7,19 +7,43 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.example.iot_system_BE.entity.DeviceAction;
+import com.example.iot_system_BE.repository.DeviceActionRepository;
 import com.example.iot_system_BE.service.DeviceActionService;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+
 
 
 @RestController
-@RequestMapping("/api/device-action")
+@RequestMapping
 public class DeviceActionController {
 
     @Autowired
     private DeviceActionService deviceActionService;
 
-    @GetMapping("")
+    @GetMapping("/api/device-action")
     public List<DeviceAction> getAllDeviceAction(){
         return deviceActionService.getAllDeviceAction();
     }
+
+    private final DeviceActionRepository repository;
+
+    public DeviceActionController(DeviceActionRepository repository) {
+        this.repository = repository;
+    }
+    @GetMapping("/api/device-action/search")
+   public List<DeviceAction> searchData(
+            @RequestParam String type, 
+            @RequestParam String value) {
+
+        switch (type) {
+           
+            case "date":
+                return repository.findByExactTimestamp(value);
+            default:
+                throw new IllegalArgumentException("Loại tìm kiếm không hợp lệ: " + type);
+        }
+    }
+    
+
 }
