# iot_system_BE/src/main/java/com/example/iot_system_BE/entity/DeviceAction.java
@@ -6,8 +6,10 @@ import jakarta.persistence.Entity;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
+import jakarta.persistence.Table;
 
 @Entity
+@Table(name = "device_action")
 public class DeviceAction {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
